--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 
       </section>
       <footer>    
-        <p><small>Hosted on GitHub Pages &mdash; Thanks to <a href="https://github.com/orderedlist">orderedlist</a> for the theme!</small></p>
+        <p><small>GitHub Pages &mdash; xoxo <a href="https://github.com/orderedlist">orderedlist</a> for the theme!</small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
